# myOpenGLUtils

./: CMakeLists.txt  README.md
src/: main.cpp  shaderClass.cpp
src/Buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Headers/: FindDirs.h  Shaders.h  shapes.h
src/Shaders/: default.frag  default.vert
